fastfood-production/k8s/persistence-hpa/fastfood-production-mongo-statefulset-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fastfood-production-mongo-virtual-service
spec:
  hosts:
    - fastfood-production-mongo-service
  http:
    - route:
        - destination:
            host: fastfood-production-mongo-service
            port:
              number: 27017
